Arrumando os cards de empresas e aulas

--- a/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
+++ b/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
@@ -249,7 +249,7 @@ body {
 }
 
 .form_corpo_cards {
-  width: 62%;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   overflow-y: scroll;
@@ -351,10 +351,18 @@ select#status_vaga {
 .container_aula {
   width: 62%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.container_empresa {
+  width: 62%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .container_aula form {
   width: 60%;
@@ -405,7 +413,7 @@ select#status_vaga {
 
 /* Area cursos - Listar Cursos */
 
-.titulo-curso {
+.titulo {
   text-align: center;
   color: #fff;
   background-color: #B378FF;
