--- a/jobdelas/src/main/resources/templates/jb_company/buscar-empresas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/buscar-empresas.html
@@ -37,7 +37,7 @@
           </button>
           <div class="form_corpo_cards">
             <div class="card" th:if="${empresaDetalhes != null}">
-              <p class="titulo"><strong>Nome:</strong> <span th:text="${empresaDetalhes.nome}"></span></p>
+              <p class="titulo"><span th:text="${empresaDetalhes.nome}"></span></p>
               <p><strong>CNPJ:</strong> <span th:text="${empresaDetalhes.cnpj}"></span></p>
               <p><strong>Email:</strong> <span th:text="${empresaDetalhes.email}"></span></p>
               <p><strong>Telefone:</strong> <span th:text="${empresaDetalhes.telefone}"></span></p>
