--- a/jobdelas/src/main/resources/templates/jobdelas/index.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/index.html
@@ -54,14 +54,76 @@
                     Concluir
                   </button>
                 </form>
-                <form
-                  th:action="@{tarefas/editar/__${tarefa.id}__}"
-                  method="post"
+                <button
+                  type="button"
+                  id="btnEditarTarefa"
+                  data-toggle="modal"
+                  data-target="#editarTarefaModal"
+                  class="atualizar-tarefa"
                 >
-                  <button type="submit" class="atualizar-tarefa">
-                    <i class="fa fa-edit"></i> Atualizar
-                  </button>
-                </form>
+                  <i class="fa fa-edit"></i> Atualizar
+                </button>
+
+                <div
+                  class="modal fade"
+                  id="editarTarefaModal"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="editarTarefaModalLabel"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="editarTarefaModalLabel">
+                          Editar Tarefa
+                        </h5>
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Fechar"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <form
+                          th:action="@{/tarefas/editar/{id}(id=${tarefa.id})}"
+                          method="post"
+                        >
+                          <div class="form-group">
+                            <label for="titulo">Título:</label>
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="titulo"
+                              name="titulo"
+                              th:value="${tarefa.titulo}"
+                              placeholder="Digite o título da tarefa"
+                              required
+                            />
+                          </div>
+                          <div class="form-group">
+                            <label for="descricao">Descrição:</label>
+                            <textarea
+                              class="form-control"
+                              id="descricao"
+                              name="descricao"
+                              rows="3"
+                              th:value="${tarefa.descricao}"
+                              placeholder="Digite a descrição da tarefa"
+                              required
+                            ></textarea>
+                          </div>
+                          <button type="submit" class="btn btn-primary">
+                            Alterar Tarefa
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
