Fix: curitda e limpando alguns arquivos

--- a/jobdelas/src/main/resources/templates/jb_company/buscar-empresas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/buscar-empresas.html
@@ -18,10 +18,9 @@
         <a href="/jbcompany/listar/empresas"><i class="fas fa-list"></i> Listar Empresas
         </a>
         <a href="/jbcompany/buscar/empresas"><i class="fas fa-search"></i> Buscar Empresa</a>
-        <a href="/jbcompany/cadastrar/empresas"><i class="fas fa-users"></i> Visualizar Candidatos</a>
       </nav>
       <div class="logo">
-        <img src="/img/jb_company.png" alt="Sua Logo" />
+        <img src="/img/jb_company.png" alt="jbcompany logo" />
       </div>
     </div>
     <div class="container_empresa">
