--- a/jobdelas/src/main/resources/templates/jb_company/cadastrar-aula.html
+++ b/jobdelas/src/main/resources/templates/jb_company/cadastrar-aula.html
@@ -25,7 +25,7 @@
           >
         </nav>
         <div class="logo">
-          <img src="/img/jb_company.png" alt="Sua Logo" />
+          <img src="/img/jb_company.png" alt="jbcompany logo" />
         </div>
       </div>
       <div class="container_aula">
