--- a/jobdelas/src/main/resources/static/css/vagas.css
+++ b/jobdelas/src/main/resources/static/css/vagas.css
@@ -93,6 +93,10 @@
     background-color: var(--branco);
 }
 
+.vagas:hover {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
+}
+
 .funcao {
     margin-top: 0;
     overflow-y: hidden;
