--- a/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
@@ -24,12 +24,9 @@
           <a href="/jbcompany/buscar/empresas"
             ><i class="fas fa-search"></i> Buscar Empresa</a
           >
-          <a href="/jbcompany/cadastrar/empresas"
-            ><i class="fas fa-users"></i> Visualizar Candidatos</a
-          >
         </nav>
         <div class="logo">
-          <img src="/img/jb_company.png" alt="Sua Logo" />
+          <img src="/img/jb_company.png" alt="jbcompany logo" />
         </div>
       </div>
 
