--- a/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/card_infoaprendizado.css" />
     <link rel="stylesheet" href="/css/cursos.css" />
+    <link rel="stylesheet" href="/css/index.css">
   </head>
 
   <body>
