--- a/jobdelas/src/main/resources/templates/jobdelas/chat/chat.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/chat/chat.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/chat.css" />
+    <link rel="stylesheet" href="/css/index.css">
     <title>Mensagens</title>
   </head>
 
