--- a/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
@@ -149,6 +149,7 @@
                       th:value="${usuarioLogado.email}"
                     />
                   </div>
+                  <label for="editSenha">Senha:</label>
                   <input
                     type="password"
                     class="form-control"
