--- a/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/vagas.css" />
+    <link rel="stylesheet" href="/css/index.css">
 
     <title>Vagas</title>
   </head>
