--- a/jobdelas/src/main/resources/static/css/chat.css
+++ b/jobdelas/src/main/resources/static/css/chat.css
@@ -93,9 +93,8 @@ justify-content: center;
   }
   
 
-  input[type="text"] {
+  .escrever-mensagem {
     width: 100%;
-    padding: 8px;
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
