--- a/jobdelas/src/main/resources/templates/jobdelas/aprendizado/aulas.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/aprendizado/aulas.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/curso.css" />
+    <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
   </head>
   <body>
     <header class="header"></header>
