--- a/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/vagas.css" />
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
 
     <title>Vagas</title>
   </head>
