--- a/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/css/card_infoaprendizado.css" />
     <link rel="stylesheet" href="/css/cursos.css" />
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
   </head>
 
   <body>
